# browserexport

./: .gitignore  LICENSE  MANIFEST.in  P_README.md  README.md  mypy.ini  requirements.txt  setup.cfg  setup.py
.github/workflows/: run-tests.yaml
browserexport/: __main__.py  common.py  demo.py  log.py  merge.py  model.py  parse.py  save.py  sqlite.py
browserexport/browsers/: all.py  arc.py  brave.py  chrome.py  chromium.py  common.py  edge.py  edgedev.py  firefox.py  firefox_mobile.py  firefox_mobile_legacy.py  floorp.py  librewolf.py  opera.py  palemoon.py  safari.py  vivaldi.py  waterfox.py
ffexport/: __init__.py  __main__.py  cli.py  common.py  demo.py  log.py  merge_db.py  model.py  parse_db.py  save_hist.py  serialize.py
tests/: db.sqlite  test_browserexport.py  test_ffexport.py  test_package.py
tests/databases/: brave.sqlite  chrome.sqlite  chromium.sqlite  firefox.sqlite  firefox_mobile.sqlite  firefox_mobile_legacy.sqlite  merged_dump.json  merged_dump.json.xz  merged_dump.jsonl  palemoon.sqlite  safari.sqlite  vivaldi.sqlite  waterfox.sqlite
