[metadata]
name = browserexport
version = 0.4.1
description = save and merge browser history and metadata from different browsers
long_description = file: README.md
long_description_content_type = text/markdown
url = "https://github.com/seanbreckenridge/browserexport"
author = Sean Breckenridge
author_email = seanbrecke@gmail.com
license = MIT
license_files = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
keywords = backup, brave, chrome, chromium, database, export, firefox, google-chrome, history, palemoon, safari, vivaldi, waterfox

[options]
packages = find_namespace:
install_requires =
    click>=8.1
    logzero
    sqlite-backup>=0.1.7
python_requires = >=3.8
include_package_data = True
setup_requires =
    setuptools
    wheel
test_suite = tests

[options.packages.find]
include =
    browserexport
    browserexport.*

[options.entry_points]
console_scripts =
    browserexport = browserexport.__main__:cli

[options.extras_require]
testing =
    flake8
    mypy
    pytest

[options.package_data]
browserexport = py.typed

[flake8]
ignore = E501,E402,W503,E266,E203
per-file-ignores =
    browserexport/browsers/common.py:F401

[mypy]
pretty = True
show_error_context = True
show_error_codes = True
check_untyped_defs = True
namespace_packages = True
disallow_any_generics = True
disallow_subclassing_any = True
disallow_untyped_calls = True
disallow_untyped_defs = True
disallow_incomplete_defs = True
no_implicit_optional = True
warn_redundant_casts = True
warn_return_any = True
warn_unreachable = True

[tool:pytest]
addopts =
    --verbose
    tests
